<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CameraFragment">

        <androidx.camera.view.PreviewView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:id="@+id/flashOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:alpha="0"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/goVideoBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/go_to_video_capture"
            android:src="@drawable/ic_video_cam" />

        <ImageView
            android:id="@+id/imgCaptureBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/take_photo"
            android:src="@drawable/ic_take_photo" />

        <ImageButton
            android:id="@+id/switchBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/switch_camera"
            android:src="@drawable/ic_swith_camera" />

        <ImageButton
            android:id="@+id/galleryBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/open_gallery"
            android:src="@drawable/ic_gallery" />
    </RelativeLayout>

</layout>